--- a/src/app/lista-mascotas/lista-mascotas.component.html
+++ b/src/app/lista-mascotas/lista-mascotas.component.html
@@ -1,30 +1,4 @@
-<div class="mt-3 col-sm-6 mx-auto">
-
-    <div *ngFor="let reporte of lista">
-        <!-- Card -->
-        <div *ngIf="reporte.visible" class="card mb-3">
-            <!-- Header -->
-            <div class="card-header text-center">
-                <h4 class="text-primary">{{reporte.title}}</h4>
-            </div>
-            <!-- Body -->
-            <div class="card-body">
-                <div class="d-flex">
-                    <!-- Imagen -->
-                    <div class="img-container">
-                        <img src={{reporte.image}} class="object-fit-cover">
-                    </div>
-                    <!-- Detalle reporte -->
-                    <div class="ps-3">
-                        <p class="fw-bold">Última vez visto : {{reporte.ultimo_visto}} </p>
-                        <p>{{reporte.description}}</p>
-                        <p>Contacto: {{reporte.contact}} </p>
-                        <p> {{reporte.country}} </p>
-                        <a target="_blank" class="btn btn-warning rounded-pill" href={{reporte.url}}>Ver reporte
-                            completo</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div>
+    <!-- Card -->
+    <card-reporte *ngFor="let reporte of lista" [reporte]="reporte"></card-reporte>
 </div>
